# BrnoLM

./: LICENSE  README.md  pick-best.sh  pyproject.toml  qsub-wrapper.sh  setup.py  torchscript-example.py
brnolm/: analysis.py  analyze-ivec-changes.py  analyze-ivec-distribution.py  files-to-bow.py  investigate-ivecs.py  kaldi_itf.py  lm-info.py  multifile-ivec-unigram-ppl.py  multifile-ml-unigram-ppl.py  multifile-ml-unigram-tranfer-ppl.py  path.sh  plotting.py  rmn-activation-plotter.py  rmn-grad-plotter.py  rmn-plotter.py  srilm-debug2.py  zoo.py
exp/: eval-eval-batchsize.sh  eval-eval-bptt.sh  exp-bengio-ii.sh  exp-bengio-model.sh  exp-ivecs-linear-bn-oracle-train.sh  exp-ivecs-only.sh  exp-ivecs-output-bottleneck-oracle-train.sh  exp-ivecs-output-bottleneck.sh  exp-ivecs-output-loglinear-small.sh  exp-ivecs-output-loglinear.sh  exp-lstm-enblock.sh  exp-lstm-only.sh  exp-random-ivecs-every-epoch.sh  exp-random-ivecs-loglin-oracle-train.sh  extract-single-result.sh  smmlm-qsub-wrapper.sh  wt2-midsize-exp.sh
scripts/: corpus-stats.py  display-augmented-data.py  export-torchscript.py  get-char-vocab.py  gpu-acquisitor.py  measuring-softmax-time.py  migrator-batch-first.py  migrator.py  model-info.py  sample-from-lm.py
test/: test_analysis.py  test_decoders.py  test_det.py  test_ivec_appenders.py  test_language_model.py  test_masked.py  test_model_statistics.py  test_multistream.py  test_oov_alignment_lib.py  test_runtime_util.py  (+4 more)
test-script-level/: test-everything-runs.sh  test-fn-runs.sh  test-ifn-runs.sh  test-it.sh  test-lstm-runs.sh  test-lstmp-runs.sh
(+102 files in other folders)
